# KontrachenciForm

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Footer.qml  Main.qml  NipCombo.qml  NipFoundBox.qml  PersonDataPanel.qml  PersonPanel.qml  Resources.qrc  UserCombo.qml  Userdata.json  jsonwrapper.h  main.cpp  usernamefiltermodel.h
Kernel/: CMakeLists.txt  UserData.h  jsonwrapper.cpp  userdatamodel.cpp  userdatamodel.h  usernamefiltermodel.cpp
UI/: AppFooter.qml  CMakeLists.txt  FloatingTitle.qml  IconTextField.qml  NIpNotFoundBox.qml  Resources.qrc  UserComboDelegate.qml
